# basedrop

./: CHANGELOG.md  Cargo.toml  README.md
src/: collector.rs  lib.rs  owned.rs  shared.rs  shared_cell.rs
