[package]
name = "basedrop"
version = "0.1.1"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
description = "Memory-management tools for real-time audio and other latency-critical scenarios"
repository = "https://github.com/glowcoil/basedrop"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]